# HALPI2-rust-daemon

./: .bumpversion.cfg  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  lefthook.yml  run
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/actions/build-deb/: action.yml
.github/actions/run-tests/: action.yml
.github/scripts/: calculate-revision.sh  generate-changelog.sh  generate-release-notes.sh  read-version.sh  rename-packages.sh
.github/templates/: release-notes.md.template
.github/workflows/: build.yml  draft-release.yml  main.yml  release.yml
config/: halpid.conf
docs/: ARCHITECTURE.md  FIRMWARE_FLASH_SEQUENCE.md  MIGRATION.md  SPEC.md  TESTING.md
halpi/: Cargo.toml
halpi-common/: Cargo.toml
halpi-common/src/: config.rs  error.rs  lib.rs  protocol.rs  types.rs
halpi/src/: client.rs  main.rs
halpi/src/commands/: config.rs  flash.rs  mod.rs  shutdown.rs  status.rs  usb.rs
halpid/: Cargo.toml
halpid/debian/: halpid.postinst  halpid.prerm  halpid.service  lintian-overrides
halpid/src/: main.rs
halpid/src/daemon/: mod.rs  signals.rs
halpid/src/i2c/: device.rs  dfu.rs  mod.rs
halpid/src/server/: app.rs  mod.rs
halpid/src/server/handlers/: config.rs  flash.rs  health.rs  mod.rs  shutdown.rs  usb.rs  values.rs
halpid/src/state_machine/: machine.rs  mod.rs
