[workspace]
members = ["halpid", "halpi", "halpi-common"]
resolver = "2"

[workspace.package]
version = "5.0.2"
authors = ["Matti Airas <matti.airas@hatlabs.fi>"]
edition = "2024"
rust-version = "1.90"
license = "BSD-3-Clause"
repository = "https://github.com/hatlabs/HALPI2-rust-daemon"
homepage = "https://docs.hatlabs.fi/halpi2"

[profile.release]
strip = true

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["tokio", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# I2C
i2cdev = "0.6"

# CRC32
crc32fast = "1.4"

# Unix system calls
libc = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time handling
chrono = "0.4"

# Unix socket HTTP client
hyperlocal = "0.9"

# Shared workspace crate
halpi-common = { path = "halpi-common" }
