[package]
name = "halpid"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Power monitor and watchdog daemon for HALPI2"

[dependencies]
halpi-common.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
i2cdev.workspace = true
crc32fast.workspace = true
libc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
clap.workspace = true

# Daemon-specific dependencies
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[[bin]]
name = "halpid"
path = "src/main.rs"

[package.metadata.deb]
name = "halpi2-rust-daemon"
conflicts = "halpid"
replaces = "halpid"
provides = "halpid"
maintainer = "Hat Labs Ltd. <info@hatlabs.fi>"
copyright = "2025, Hat Labs Ltd."
license-file = ["../LICENSE", "0"]
extended-description = """\
HALPI2 power monitoring and watchdog daemon (Rust implementation).
Provides power management, blackout detection, and hardware watchdog
functionality for HALPI2 Raspberry Pi CM4/CM5 carrier boards."""
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["target/release/halpid", "usr/bin/", "755"],
    ["target/release/halpi", "usr/bin/", "755"],
    ["../config/halpid.conf", "etc/halpid/halpid.conf", "644"],
]
conf-files = [
    "/etc/halpid/halpid.conf",
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "halpid" }
